# MTPy

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Cargo.toml  Old_UML.mmd  README.md  __init__.py  base.py  build.sh  build_docs.sh  changelog.txt  data_analysis_example.py  data_loader.py  data_processor.py  detection_test.py  devenv.nix  devenv.yaml  flake.nix  meltpool_tomography.py  mem_profile_0.txt  mkdocs.yaml  mtpy.py  netlify.toml  packages.html  plan.txt  pre-commit-config.yaml  properdocs.yaml  pyproject.toml  readthedocs.yaml  requirements.txt  todo.md
.github/: dependabot.yml
.github/workflows/: python-package-build.yaml  python-package-check.yaml  release.yaml
common/: __init__.py  base.py
data/: data_loader.py  data_processor.jl  data_processor.py
dataproc/: __init__.py  data_loader.py  data_processor.py  data_statistics.py  data_thresholder.py
datavis/: __init__.py  data_plotter.py  dispatchers2d.py  dispatchers3d.py  hooks2d.py  hooks3d.py  plotter2d.py  plotter3d.py  plotter_base.py
datavis/config/: plotter2d.json  plotter3d.json
docs/: _pyproject.toml  conf.py  docs.py  documentation.md  index.md  index.rst  quickstart.md  requirements.txt  type_reports.md
docs/assets/: example_plot.html
docs/documentation/: cli.md
julia/: Manifest.toml
mtpy/: __init__.py  __main__.py  cli.py  meltpool_tomography.py
mtpy/base/: abstract.py  protocol.py
mtpy/base/feedback/: __init__.py  dummy.py  protocol.py
mtpy/loaders/: abstract.py  aconity.py  csv.py  dummy.py  protocol.py
mtpy/proc/: __init__.py  abstract.py  dummy.py  processor.py  protocol.py  statistics.py  thresholder.py
mtpy/utils/: __init__.py  hdf5_operations.py  large_hash.py  log_intercept.py  metadata_tagging.py  tree_metdata.fbs  type_coercions.py  type_guards.py  types.py
mtpy/utils/tree_metadata/: Metadata.py  Metadata.pyi  Sha1.py  Sha1.pyi  TreeFile.py  TreeFile.pyi
mtpy/vis/: __init__.py  abstract.py  dummy.py  plotter.py  protocol.py
mtpy/vis/vis2d/: dispatchers.py  hooks.py  plotter.py  plotter.toml
mtpy/vis/vis3d/: __init__.py  dispatchers.py  hooks.py  plotter.json  plotter.py  plotter.toml
scripts/: build_flatbuffer_schemas.py  bump.py  gen_ref_pages.py  gen_type_reports.py  gen_uml_diagrams.py  semver.py  semver_pyproj.py  sync_init_vars.py  utils.py
src/julia/: detection_test.jl  detection_test.py  detection_test.py.unused  raster_detection(deadend).jl  raster_detection(last_working).jl  raster_detection.jl
src/python/mtpy/: __init__.py  meltpool_tomography.py
src/python/mtpy/base/: __init__.py  abstract.py  protocol.py
src/python/mtpy/base/feedback/: __init__.py  protocol.py
src/python/mtpy/common/: __init__.py  base.py
src/python/mtpy/dataproc/: data_loader.py  data_processor.jl  data_processor.py  data_statistics.py  data_thresholder.py
src/python/mtpy/datavis/: __init__.py  data_plotter.py  dispatchers2d.py  dispatchers3d.py  hooks2d.py  hooks3d.py  plotter2d.py  plotter3d.py  plotter_base.py
src/python/mtpy/loaders/: __init__.py  abstract.py  aconity.py  dummy.py  protocol.py
src/python/mtpy/proc/: __init__.py  abstract.py  processor.py  protocol.py  statistics.py  thresholder.py
src/python/mtpy/utils/: __init__.py  apply_defaults.py  large_hash.py  log_intercept.py  metadata_tagging.py  tar_handling.py  type_coercions.py  type_guards.py  types.py
src/python/mtpy/vis/: __init__.py  abstract.py  plotter.py  protocol.py
src/python/mtpy/vis/vis2d/: dispatchers.py  hooks.py  plotter.json  plotter.py
src/python/mtpy/vis/vis3d/: __init__.py  dispatchers.py  hooks.py  plotter.py
src/rust/: lib.rs
tests/: __init__.py
tests/loaders/: abstract_test.py  aconity_test.py  csv_test.py
tools/: __init__.py  meltpool_tomography.py
utils/: apply_defaults.py  large_hash.py  metadata_tagging.py  tar_handling.py
