[project]
name = "mtpylib"
dynamic = ["version"]
description = "A python based tool for Meltpool Tomography."
readme = "README.md"
authors = [{ name = "Cian Hughes", email = "cian.hughes@dcu.ie" }]
requires-python = ">=3.13"
dependencies = [
    "annotated-doc>=0.0.4",
    "dash>=2.18.2",
    "dask>=2024.12.1",
    "datashader>=0.17.0",
    "loguru>=0.7.3",
    "numba>=0.65.1",
    "numpy>=2.4.0,<2.5.0",
    "pandas>=2.2.3",
    "panel-material-ui>=0.2.0",
    "panel>=1.5.5",
    "plotly>=5.24.1",
    "pyarrow>=18.1.0",
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.4",
    "tqdm>=4.67.1",
]

[project.scripts]
mtpy = "mtpy.__main__:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mtpy"]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    "docs/",
    "site/",
    "cache/",
    ".github/",
    ".git/",
]

[tool.hatch.version]
path = "mtpy/__init__.py"

[tool.bumpver]
current_version = "0.5.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"mtpy/__init__.py" = [
    '__version__ = "{version}"',
]

[dependency-groups]
dev = [
    "pyright>=1.1.391",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
    "ty>=0.9.0",
    "hypothesis>=6.123.1",
    "pydoclint>=0.6.0",
]
docs = [
    "mkdocs-material>=9.5.49",
    "mkdocs-coverage>=1.1.0",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
addopts = "--cov=mtpy --cov-report=html"
